# kurs_project

./: README.md  pyproject.toml  report.txt
src/: external_api.py  report.txt  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
